[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Gui/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Assets/Themes/PauseMenu.tres" type="StyleBox" id=2]
[ext_resource path="res://src/Gui/Options/Options.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0392157, 0.129412, 0.435294, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0392157, 0.129412, 0.435294, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.537255, 0.0901961, 0.0901961, 1 )

[node name="Options" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 45.0
color = Color( 0.054902, 0.286275, 0.411765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="mainContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 45.0

[node name="HBoxContainer" type="HBoxContainer" parent="mainContainer/VBoxContainer/MarginContainer"]
margin_right = 1024.0
margin_bottom = 45.0

[node name="General" parent="mainContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_top = 0.0
margin_right = 253.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_constants/hseparation = 0
text = "General"

[node name="Graphics" parent="mainContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 257.0
margin_top = 0.0
margin_right = 510.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
text = "Graphics"

[node name="Control" parent="mainContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 514.0
margin_top = 0.0
margin_right = 767.0
margin_bottom = 45.0
size_flags_horizontal = 3
text = "Control"

[node name="Audio" parent="mainContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 771.0
margin_top = 0.0
margin_right = 1024.0
margin_bottom = 45.0
size_flags_horizontal = 3
text = "Audio"

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="mainContainer/VBoxContainer/VBoxContainer"]
margin_top = 506.0
margin_right = 1024.0
margin_bottom = 551.0
alignment = 1

[node name="Return" parent="mainContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 446.0
margin_top = 0.0
margin_right = 578.0
margin_bottom = 45.0
text = "Back"
[connection signal="pressed" from="mainContainer/VBoxContainer/MarginContainer/HBoxContainer/General" to="." method="_on_General_pressed"]
[connection signal="pressed" from="mainContainer/VBoxContainer/MarginContainer/HBoxContainer/Graphics" to="." method="_on_Graphics_pressed"]
[connection signal="pressed" from="mainContainer/VBoxContainer/MarginContainer/HBoxContainer/Control" to="." method="_on_Control_pressed"]
[connection signal="pressed" from="mainContainer/VBoxContainer/VBoxContainer/HBoxContainer/Return" to="." method="_on_Return_pressed"]
